# social-media-listening

./: .dockerignore  .gitignore  Dockerfile  README.md  examples.py  get_session_string_example.py  pyproject.toml  run_pipeline.py  telegram_pipeline.py
.github/ISSUE_TEMPLATE/: Scrape
.github/workflows/: docker-smm.yaml  update-image.yaml
config/: config-template.yaml  config.yaml  config_template.yaml  ethiopia.json  keywords.csv  kobo.json  kobo.yaml  namibia.json  namibia.yaml  romania.yaml  tweets_to_track.csv  uganda.yaml  wordfreq_clean.csv  youtube_to_track.csv
credentials/: .env-example  .gitignore  blobstorage_secrets_example.json  example.env  google_service_account_secrets_example.json  twitter_secrets_example.json
pipeline/: requirements.txt  setup.py
pipeline/src/pipeline/: get_data.py  get_session_string_example.py  parse_data.py  pipeline.py  utils.py
retrain_topic_model/: GSDMM.py  retrain_topic_model.py
sml/: __init__.py  extract.py  load.py  message.py  pipeline.py  secrets.py  topics.py  transform.py
smm/: requirements.txt  setup.py  test.py
smm/src/smm/: __init__.py  context.py  extract.py  load.py  message.py  pipeline.py  secrets.py  transform.py
smm/tests/unit/: test_extract.py  test_load.py  test_transform.py
tests/integration/: test_telegam_pipeline.py
tests/unit/: test_extract.py  test_load.py  test_transform.py
