[tool.poetry]
name = "sml"
version = "0.0.1"
authors = [
  "Phuoc Phùng <pphung@redcross.nl>",
  "Wessel de Jong <wdejong@redcross.nl>",
  "Jacopo Margutti <jmargutti@redcross.nl>"
]
description = "Social Media Listening"
readme = "README.md"
repository = "https://github.com/rodekruis/social-media-listening"
packages = [{include = "sml"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
argilla = "1.28.0"
azure-common = "*"
azure-identity = "*"
azure-keyvault-secrets = "*"
azure-storage-blob = "*"
azure-cosmos = "*"
clean-text = "*"
click = "*"
datasets = "*"
geopandas = "*"
google-cloud-translate = "*"
huggingface_hub = "*"
pandas = "*"
pyodbc = "*"
python-dotenv = "*"
sacremoses = "*"
sentencepiece = "*"
setfit = "*"
spacy = "*"
SQLAlchemy = "*"
stopwordsiso = "*"
Telethon = "*"
torch = "*"
tqdm = "*"
transformers = "*"
tweepy = "*"
urllib3 = "<=2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"